refactor: Apply OpenRewrite and Spotless