@@ -51,7 +51,7 @@ public class EmailSender {
     private void send(SesV2Client client) {
         String reportDate = LocalDate.now().format(DATE_FORMATTER_DD_MM_YYYY);
         String mailBody = createMailBody(reportDate);
-        String subject = String.format("Actual metal prices for %s", reportDate);
+        String subject = "Actual metal prices for %s".formatted(reportDate);
 
         SendEmailRequest emailRequest = SendEmailRequest.builder()
                 .destination(d -> d.toAddresses(recipients))
